src/test/deca/syntax/invalid/personalTests/lexer/testCounter5.deca
// Description :
//      test 5 de programmes lexicalement incorrects. Le contre-exemple est au niveau des include.
// Résultats :
//      erreur de reconnaissance de token.
// Historique :
//      créé le 19/12/2023

#include nomRandomSansGuillemets.extensionRandom